welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:3: error: ';' expected but 'true' found.
    retunr true
           ^